# grohuh

./: .gitignore  Cargo.toml  docker-compose.yml  soc_trigger
mqtt/config/: mosquitto.conf
src/: main.rs
