[package]
name = "grohuh"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
rumqttc = "0.23.0"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
surrealdb = "1.1.1"
tokio = { version = "1.35.1", features = ["rt-multi-thread", "macros"] }
ulid = { version = "1.1.2", features = ["serde"] }
