[package]
name = "grohuh"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
rumqttc = "0.24.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.119"
surrealdb = "1.5.3"
tokio = { version = "1.38.0", features = ["rt-multi-thread", "macros"] }
ulid = { version = "1.1.2", features = ["serde"] }
